--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grindergifts",
   "version": "1.0.0",
-  "main": "GrinderGiftsJS.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -9,9 +9,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "stripe": "^7.14.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "dotenv": "^8.2.0"
+  },
   "description": ""
 }
